# md-editor

./: .pre-commit-config.yaml  Cargo.toml  README.md
.memory_bank/: activeContext.md  (+14 more)
crates/core/: Cargo.toml
crates/core/examples/: advanced_error_handling.rs  basic_usage.rs  check_pulldown.rs  document_builder.rs  enhanced_code_blocks.rs  error_handling.rs  markdown_features.rs  selection_api.rs  transaction_api.rs
crates/core/fixtures/: test.md  test_edited.md  test_undo_redo.md
crates/core/src/: error.rs  lib.rs
crates/core/src/convert/: html.rs  json.rs  mod.rs
crates/core/src/convert/markdown/: mod.rs  parser.rs
crates/core/src/editor/: command.rs  mod.rs  transaction.rs
crates/core/src/editor/commands/: add_task_item.rs  copy_selection.rs  create_table.rs  create_toc.rs  cut_selection.rs  delete_node.rs  duplicate_node.rs  edit_task_item.rs  find_replace.rs  format_text.rs  group_nodes.rs  indent_task_item.rs  insert_node.rs  insert_text.rs  mod.rs  move_node.rs  move_task_item.rs  node_conversion.rs  remove_task_item.rs  selection_format.rs  selection_indent.rs  sort_task_list.rs  table_operations.rs  toggle_task.rs
crates/core/src/models/: document.rs  formatting.rs  inline.rs  mod.rs  node.rs  selection.rs
crates/core/src/models/builder/: basic.rs  mod.rs  selection.rs
crates/core/tests/: add_task_item_test.rs  advanced_features_test.rs  document_editing_test.rs  edit_task_item_test.rs  markdown_undo_redo_test.rs  move_task_item_test.rs  remove_task_item_test.rs  toggle_task_test.rs
editor/: Cargo.toml  README.md
editor/src/: main.rs
(+4 files in other folders)
