[package]
name = "md-core"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """
Core data structure for a markdown editor with serialization support for markdown, HTML, and JSON.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["markdown", "editor", "document", "html", "json"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# External parsers for markdown and HTML
pulldown-cmark = "0.13"
html5ever = "0.31"
mdka = "1"
regex = "1.11.1"

[dev-dependencies]
proptest = "1.0" # For property-based testing
